# neuro-symbolic

./: .gitignore  CNN.ipynb  CNN_Noisy.ipynb  DeepProbLog B1.ipynb  DeepProbLog B2.ipynb  DeepProbLog B3.ipynb  DeepProbLog B4.ipynb  DeepProbLog Noisy.ipynb  README.md  Training plot.ipynb  pyproject.toml
background/: mnist_b1.pl  mnist_b2.pl  mnist_b3.pl  mnist_b4.pl
